2021-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/profile.c (SetImageProfile): Do not try to store a
        zero-sized profile.

        * coders/webp.c (ReadWEBPImage): Enforce that embedded profiles
        provided by libWebP are not zero-sized. This problem was brought
        to our attention by Shane Bishop on the graphicsmagick-help
        mailing list.

2021-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Makefile.am: Add support for using an external
        'graphicsmagick_snapshot_copy' script to copy files for the
        'snapshot' target.  This provides local control over how files are
        copied and where they are copied to.

        * coders/msl.c (MSLStartElement): Use macros to simplify
        validations and reduce repeated code fragments. Add validations
        for image size and pixels present where applicable.  Fixes
        oss-fuzz 36224 "graphicsmagick:coder_MSL_fuzzer: Timeout in
        coder_MSL_fuzzer".

        * magick/transform.c (RollImage): Assert that image rows and
        columns are not zero.

2021-07-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (initialize_jasper): Update for the latest version
        of the evolving jas_init_custom() interface provided by the
        mdadams-callbacks branch.

2021-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c: Assure that the designated decoder is used rather
        than using autodetection and possibly using a different decoder
        than intended. Added experimental support for JasPer
        HAVE_JAS_INIT_CUSTOM feature, but leave disabled by default.  Fix
        a stream manager bug noticed with the madams-callbacks branch of
        JasPer.

2021-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Fix possible use of freed
        memory.  Fixes oss-fuzz 35621 "graphicsmagick:coder_MSL_fuzzer: