@@ -37,6 +37,8 @@
 
 <p>2021-07-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
+<p>* coders/webp.c (ReadWEBPImage): Add full error checking when
+retrieving embedded profiles.</p>
 <p>* magick/profile.c (SetImageProfile): Do not try to store a
 zero-sized profile.</p>
 <p>* coders/webp.c (ReadWEBPImage): Enforce that embedded profiles
